--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.data.mongodb.database=marriage_app
-# spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.uri=mongodb://localhost:27017
 # spring.data.mongodb.uri=mongodb+srv://mostafa19500mahmoud:mostafa19500mahmoud@cluster1.si9kq5u.mongodb.net/?retryWrites=true&w=majority
