--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.data.mongodb.database=marriage_app
 # spring.paypal.client-secret=EGzpHHVo_wg3gUMwTSQYRODhBfIGfpP11-KKLsRrnP340atjjaM4VDfDtVcoUDyvgAi2mYhz3bXfpNx4
 
 # twilio properties
-# twilio.AccountSID=ACfee46168f8f344bb3b014e0aa39459ee
-# twilio.AuthToken=bc66e7f997918900956438dc04ab8516
-# twilio.phoneNumber=+12403398218
+twilio.AccountSID=ACfee46168f8f344bb3b014e0aa39459ee
+twilio.AuthToken=bc66e7f997918900956438dc04ab8516
+twilio.phoneNumber=+12403398218
 # twilio properties
 
