--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
 			<version>8.1.0</version>
 		</dependency>
 		
+		<dependency>
+    		<groupId>com.fasterxml.jackson.datatype</groupId>
+    		<artifactId>jackson-datatype-json-org</artifactId>
+    		<version>2.17.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
